--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,36 +60,31 @@ section {
 .sec1 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: green;
 }
 
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: yellow;
 }
 
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: black;
 }
 
 .sec4 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: blue;
 }
 
 .sec5 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: peru;
 }
 
 .active {
   display: block;
-  animation: scaleAnimation 0.7s ease-in-out;
+  animation: scaleAnimation 0.5s ease-in-out;
 }
 @keyframes scaleAnimation {
   0% {
@@ -133,4 +128,107 @@ section {
   font-size: 1.2rem;
   pointer-events: none;
   color: var(--color-grey-2);
+}
+
+/* Header Content*/
+.header-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+}
+.header-content .left-header {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.header-content .left-header .h-shape {
+  transition: all 0.4s ease-in-out;
+  width: 65%;
+  background-color: var(--color-secondary);
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  -webkit-clip-path: polygon(0 0, 46% 0%, 79% 100%, 0% 100%);
+          clip-path: polygon(0 0, 46% 0%, 79% 100%, 0% 100%);
+}
+.header-content .left-header .image {
+  border-radius: var(--br-sm-2);
+  position: absolute;
+  width: 68%;
+  height: 90%;
+  margin-left: 4rem;
+  background-color: var(--color-black);
+  display: flex;
+  align-items: center;
+}
+.header-content .left-header .image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: grayscale(100%);
+}
+.header-content .left-header .image img:hover {
+  filter: grayscale(0%);
+}
+.header-content .right-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 10rem;
+}
+.header-content .right-header .name {
+  font-size: 2.8rem;
+}
+.header-content .right-header .name span {
+  color: var(--color-secondary);
+}
+.header-content .right-header p {
+  margin: 1.5rem 0;
+  line-height: 2rem;
+}
+
+/* Reusable Components */
+.btn-con {
+  display: flex;
+  align-self: flex-start;
+}
+
+.main-btn {
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.main-btn .btn-text {
+  padding: 0 2rem;
+}
+.main-btn .btn-icon {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-secondary);
+  border-radius: 50%;
+}
+.main-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  transition: all 0.4s ease-in-out;
+  z-index: -1;
+}
+.main-btn:hover::before {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-secondary);
+  transform: translateX(0%);
 }/*# sourceMappingURL=styles.css.map */
