--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -60,36 +60,31 @@ section {
 .sec1 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: green;
 }
 
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: yellow;
 }
 
 .sec3 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: black;
 }
 
 .sec4 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: blue;
 }
 
 .sec5 {
   display: none;
   transform: translateY(0) scale(1);
-  background-color: peru;
 }
 
 .active {
   display: block;
-  animation: scaleAnimation 0.7s ease-in-out;
+  animation: scaleAnimation 0.5s ease-in-out;
   @keyframes scaleAnimation {
     0% {
       transform: translateY(-100%) scaleY(0);
@@ -131,6 +126,108 @@ section {
       font-size: 1.2rem;
       pointer-events: none;
       color: var(--color-grey-2);
+    }
+  }
+}
+
+/* Header Content*/
+.header-content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+  .left-header {
+    display: flex;
+    align-items: center;
+    position: relative;
+    .h-shape {
+      transition: all 0.4s ease-in-out;
+      width: 65%;
+      background-color: var(--color-secondary);
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      clip-path: polygon(0 0, 46% 0%, 79% 100%, 0% 100%);
+    }
+    .image {
+      border-radius: var(--br-sm-2);
+      position: absolute;
+      width: 68%;
+      height: 90%;
+      margin-left: 4rem;
+      background-color: var(--color-black);
+      display: flex;
+      align-items: center;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: grayscale(100%);
+        &:hover {
+          filter: grayscale(0%);
+        }
+      }
+    }
+  }
+  .right-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 10rem;
+    .name {
+      font-size: 2.8rem;
+      span {
+        color: var(--color-secondary);
+      }
+    }
+    p {
+      margin: 1.5rem 0;
+      line-height: 2rem;
+    }
+  }
+}
+
+/* Reusable Components */
+.btn-con {
+  display: flex;
+  align-self: flex-start;
+}
+.main-btn {
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  .btn-text {
+    padding: 0 2rem;
+  }
+  .btn-icon {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-secondary);
+    border-radius: 50%;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(100%);
+    transition: all 0.4s ease-in-out;
+    z-index: -1;
+  }
+  &:hover {
+    &::before {
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      transform: translateX(0%);
     }
   }
 }
