--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -159,13 +159,23 @@ section {
       background-color: var(--color-black);
       display: flex;
       align-items: center;
+      transition: all 0.4s ease-in-out;
+      &:hover {
+        background-color: rgb(30, 29, 29);
+        transition: all 0.4s ease-in-out;
+        box-shadow: var(--box-shadow-1);
+        transform: scale(1.02);
+      }
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         filter: grayscale(100%);
+        transition: all 0.4s ease-in-out;
         &:hover {
           filter: grayscale(0%);
+          transform: translateY(-1%) scale(1.02);
+          transition: all 0.4s ease-in-out;
         }
       }
     }
